# pulumi-nuage

./: .gitignore  DetectPlatformName.sh  README.md  Taskfile.yml  cloudfront_template.yml  makefile  package-lock.json  poetry.toml  pulumi-nuage.code-workspace  pyproject.toml  schema.json  test.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: build_devcontainer.yml  release.yml  tests.yml
cloudformation/: nuage-sso.yml
deployment-templates/: .goreleaser.yml  README-DEPLOYMENT.md  release.yml
docs/: _index.md  installation-configuration.md
examples/simple/: Pulumi.yaml  index.ts  package.json
provider/: go.mod
provider/cmd/pulumi-resource-nuage/: requirements-dev.txt  requirements.txt  run-provider.py  setup.py
provider/cmd/tests/: Pulumi.yaml  TestTasks.yml  __main__.py  constants.py  poetrylock  pyproject.toml
provider/cmd/tests/files/: test_bucket.py  test_lambda.py
provider/cmd/tests/resources/: database.py  ecr.py  image.py  lambda_container.py  s3.py  vpc.py
provider/cmd/tests/stacks/: Pulumi.staging.yaml
provider/cmd/tests/tests/: conftest.py  pyproject.toml  test_bucket.py  test_database.py  test_ecr.py  test_lambda.py
pulumi_nuage/: foo.py
sdk/dotnet/: Bucket.cs  Bucket_nuage.cs  Provider.cs  Pulumi.Nuage.csproj  Utilities.cs  pulumi-plugin.json
sdk/dotnet/Aws/: Bastion.cs  Bucket_nuage.cs  ContainerFunction.cs  Enums.cs  Repository.cs  (+1 more)
sdk/nodejs/: bucket.ts  bucket_nuage.ts  index.ts  package.json  provider.ts  tsconfig.json  utilities.ts
sdk/python/: README.md  setup.py
(+74 files in other folders)
