[tool.poetry]
name = "Pulumi Nuage Tests"
version = "0.1.0"
description = ""
authors = ["burakgzt <burak.gozutok@nuage.studio>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.10"
pymysql = "^1.0.2"
pydantic = "^1.10.2"
psycopg2 = "^2.9.5"
pytest = "^7.2.0"
nuage-provider = {path = "../pulumi-resource-nuage", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
